add icon to page for_company

--- a/templates/dla_firm.html
+++ b/templates/dla_firm.html
@@ -26,7 +26,8 @@
                 <img class="img-fluid" src="/static/images/for_company/fixed2.png">
             </div>
         </div>
-        <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat p-par" style="animation-delay: 3s" href="kontakt">
+        <h5><br><a class="btn btn-outline-dark btn-lg animate__heartBeat p-par" style="animation-delay: 3s"
+                   href="kontakt">
             Skontaktuj się z nami już teraz!</a></h5>
     </div>
 
@@ -35,6 +36,8 @@
         <h2 class="h2-titles-shadow">CO NAS WYRÓŻNIA?</h2>
         <div class="col-sm-4">
             <h4 class="h4-titles">DOŚWIADCZENIE</h4>
+            <img class="animate__animated animate__zoomIn" src="static/images/for_company/experience.png"
+                 style="height: 100px; animation-delay: 1s">
             <p class="p-par" style="text-align: justify">DiPHONE z sukcesem funkcjonuje na rynku od kilku lat.
                 Elektronika stanowi naszą wieloletnią pasję; przez lata, jeszcze przed założeniem firmy, poszerzaliśmy
                 wiedzę w jej zakresie i zdobywaliśmy umiejętności związane z naprawą telefonów i sprzedaży części
@@ -43,13 +46,19 @@
         </div>
         <div class="col-sm-4">
             <h4 class="h4-titles">RZETELNOŚĆ</h4>
-            <p class="p-par" style="text-align: justify">Zaufanie klienta chcemy zdobywać, oferując mu najwyższą jakość produktu w
+            <img class="animate__animated animate__zoomIn" src="static/images/for_company/reliability.png"
+                 style="height: 100px; animation-delay: 2s">
+            <p class="p-par" style="text-align: justify">Zaufanie klienta chcemy zdobywać, oferując mu najwyższą jakość
+                produktu w
                 możliwie jak najniższej cenie. Jeśli zauważysz jakąkolwiek nieprawidłowość w zakupionym sprzęcie,
                 możesz się z nami skontaktować w każdej chwili – naprawimy ją w natychmiastowym tempie.</p>
         </div>
         <div class="col-sm-4">
             <h4 class="h4-titles">KONKURENCYJNE CENY</h4>
-            <p class="p-par" style="text-align: justify">Warszawa to miasto, w którym znajdziesz sporo serwisów – jednak podstawą
+            <img class="animate__animated animate__zoomIn" src="static/images/for_company/competetive.png"
+                 style="height: 100px; animation-delay: 3s">
+            <p class="p-par" style="text-align: justify">Warszawa to miasto, w którym znajdziesz sporo serwisów – jednak
+                podstawą
                 naszej działalności są konkurencyjne ceny, dopasowane na każdą kieszeń. Firma, którą prowadzimy, stawia
                 sobie za priorytet uczciwość. Świadomi zawirowań na rynku, dbamy o to, by oferować naszym klientom
                 usługi na najwyższym poziomie jakościowym z adekwatną ceną. Każdego traktujemy indywidualnie!</p>
@@ -67,17 +76,20 @@
         </div>
         <div class="col-sm-3">
             <h5 class="h5-titles">DOOR-TO-DOOR</h5>
-            <p class="p-par" style="text-align: justify">Istnieje możliwość wykonania naprawy na odległość. Nasz kurier odbierze od
+            <p class="p-par" style="text-align: justify">Istnieje możliwość wykonania naprawy na odległość. Nasz kurier
+                odbierze od
                 Ciebie przesyłkę z zabezpieczonym urządzeniem, a po naprawie dostarczy z powrotem.</p>
         </div>
         <div class="col-sm-3">
             <h5 class="h5-titles">INDYWIDUALNA WYCENA</h5>
-            <p class="p-par" style="text-align: justify">W przypadku klientów biznesowych istnieje możliwość indywidualnej wyceny. Aby
+            <p class="p-par" style="text-align: justify">W przypadku klientów biznesowych istnieje możliwość
+                indywidualnej wyceny. Aby
                 dowiedzieć się o szczegółach prosimy o kontakt.</p>
         </div>
         <div class="col-sm-3">
             <h5 class="h5-titles">PRIORYTET ZLECEŃ</h5>
-            <p class="p-par" style="text-align: justify">Na życzenie możemy dokonać ekspresowej naprawy Twojego telefonu. Zapytaj o
+            <p class="p-par" style="text-align: justify">Na życzenie możemy dokonać ekspresowej naprawy Twojego
+                telefonu. Zapytaj o
                 szczegóły telefonicznie lub w serwisie.</p>
         </div>
     </div>
