add icon to sales

--- a/templates/skup.html
+++ b/templates/skup.html
@@ -15,16 +15,22 @@
 
         <div class="col-sm-4">
             <h2 class="h2-titles-shadow">SPRAWNIE</h2>
+            <img class="animate__animated animate__zoomIn" src="static/images/purchase/fast.png"
+                 style="height: 100px; animation-delay: 1s">
             <p class="p-par">Sprzedać i zapomnieć? Jasna sprawa. Smartfony wyceniamy na miejscu, a pieniądze otrzymasz od ręki.</p>
         </div>
 
         <div class="col-sm-4">
             <h2 class="h2-titles-shadow">BEZPIECZNIE</h2>
+            <img class="animate__animated animate__zoomIn" src="static/images/purchase/safe.png"
+                 style="height: 100px; animation-delay: 2s">
             <p class="p-par">Olx czy allegro? Możesz ale nie musisz. U nas będzie szybciej i bez rozczarowań!</p>
         </div>
 
         <div class="col-sm-4">
             <h2 class="h2-titles-shadow">ŚWIETNA CENA</h2>
+            <img class="animate__animated animate__zoomIn" src="static/images/purchase/great_price.png"
+                 style="height: 100px; animation-delay: 3s">
             <p class="p-par">Oczywiście, może mniej niż na Allegro- w końcu i my na tym zarabiamy. Ale uczciwie dla obu stron!</p>
         </div>
 
