refill purchase page

--- a/templates/skup.html
+++ b/templates/skup.html
@@ -7,17 +7,33 @@
 
 <div class="container">
     <div class="row">
-        <p class="p-par-contact">Chcesz sprzedać swój smartfon? Męczy Cię wystawianie ogłoszeń w internecie? Nie zwlekaj! Napisz do Nas!
-            Zapewniamy fachową obsługę oraz bezpieczeństwo transakcji. Pieniądze otrzymasz od ręki!</p>
+        <div class="col-sm-4">
+            <p class="p-par">Chcesz sprzedać swój smartfon? Męczy Cię wystawianie ogłoszeń w internecie? Nie
+                zwlekaj! Napisz do Nas!
+                Zapewniamy fachową obsługę oraz bezpieczeństwo transakcji. Pieniądze otrzymasz od ręki!</p>
+        </div>
+        <div class="col-sm-4">
+            <img class="animate__animated animate__zoomIn" src="static/images/purchase/used_phones.png"
+                 style="height: 200px">
+        </div>
+        <div class="col-sm-4">
+            <p class="p-par">Skupujemy używane telefony wszystkich marek ze zbitymi ekranami i innymi
+                uszkodzeniami. Sprzedaj
+                nam swój stary używany telefon i wymień go na nowy z oferty DiPHONE! Oprócz skupu telefonów
+                używanych prowadzimy skup telefonów nowych, dołączanych przy przedłużanej umowie telefonów na
+                abonament.</p>
+        </div>
     </div>
 
+    <br>
     <div class="row">
 
         <div class="col-sm-4">
             <h2 class="h2-titles-shadow">SPRAWNIE</h2>
             <img class="animate__animated animate__zoomIn" src="static/images/purchase/fast.png"
                  style="height: 100px; animation-delay: 1s">
-            <p class="p-par">Sprzedać i zapomnieć? Jasna sprawa. Smartfony wyceniamy na miejscu, a pieniądze otrzymasz od ręki.</p>
+            <p class="p-par">Sprzedać i zapomnieć? Jasna sprawa. Smartfony wyceniamy na miejscu, a pieniądze otrzymasz
+                od ręki.</p>
         </div>
 
         <div class="col-sm-4">
@@ -31,7 +47,8 @@
             <h2 class="h2-titles-shadow">ŚWIETNA CENA</h2>
             <img class="animate__animated animate__zoomIn" src="static/images/purchase/great_price.png"
                  style="height: 100px; animation-delay: 3s">
-            <p class="p-par">Oczywiście, może mniej niż na Allegro- w końcu i my na tym zarabiamy. Ale uczciwie dla obu stron!</p>
+            <p class="p-par">Oczywiście, może mniej niż na Allegro- w końcu i my na tym zarabiamy. Ale uczciwie dla obu
+                stron!</p>
         </div>
 
         <div class="row">
@@ -47,7 +64,6 @@
 </div>
 
 
-</div>
 
 
 <!-- FOOTER -->
