--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -62,40 +62,40 @@
                     <a class="nav-link" href="/dla_firm">DLA FIRM</a>
                 </li>
 
-<!--                <li class="nav-item dropdown">-->
-<!--                    <a class="nav-link dropdown-toggle" href="/cennik" id="navbarDropdown" role="button"-->
-<!--                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                        CENNIK NAPRAW-->
-<!--                    </a>-->
-<!--                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--                        <a class="dropdown-item" href="/cennik-huawei">HUAWEI-->
-<!--                            <img class="animate__animated animate__zoomInRight"-->
-<!--                                 style="animation-delay: 100ms; height: 20px"-->
-<!--                                 src="/static/images/main_page/logo/huawei.png"></a>-->
-<!--                        <a class="dropdown-item" href="/cennik-samsung">SAMSUNG-->
-<!--                            <img class="animate__animated animate__zoomInRight"-->
-<!--                                 style="animation-delay: 200ms; height: 20px"-->
-<!--                                 src="/static/images/main_page/logo/samsung.png"></a>-->
-<!--                        <a class="dropdown-item" href="/cennik-iphone">iPHONE-->
-<!--                            <img class="animate__animated animate__zoomInRight"-->
-<!--                                 style="animation-delay: 300ms; height: 20px"-->
-<!--                                 src="/static/images/main_page/logo/apple.png"></a>-->
-<!--                        <a class="dropdown-item" href="/cennik-xiaomi">XIAOMI-->
-<!--                            <img class="animate__animated animate__zoomInRight"-->
-<!--                                 style="animation-delay: 400ms; height: 20px"-->
-<!--                                 src="/static/images/main_page/logo/xiaomi.png"></a>-->
-<!--                        <a class="dropdown-item" href="/cennik-sony">SONY-->
-<!--                            <img class="animate__animated animate__zoomInRight"-->
-<!--                                 style="animation-delay: 500ms; height: 20px"-->
-<!--                                 src="/static/images/main_page/logo/sony.png"></a>-->
-<!--                        <a class="dropdown-item" href="/cennik-lg">LG-->
-<!--                            <img class="animate__animated animate__zoomInRight"-->
-<!--                                 style="animation-delay: 600ms; height: 20px"-->
-<!--                                 src="/static/images/main_page/logo/lg.png"></a>-->
-<!--                        <div class="dropdown-divider"></div>-->
-<!--                        <a class="dropdown-item" href="/cennik-pozostale">POZOSTAŁE</a>-->
-<!--                    </div>-->
-<!--                </li>-->
+                <!--                <li class="nav-item dropdown">-->
+                <!--                    <a class="nav-link dropdown-toggle" href="/cennik" id="navbarDropdown" role="button"-->
+                <!--                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                <!--                        CENNIK NAPRAW-->
+                <!--                    </a>-->
+                <!--                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                <!--                        <a class="dropdown-item" href="/cennik-huawei">HUAWEI-->
+                <!--                            <img class="animate__animated animate__zoomInRight"-->
+                <!--                                 style="animation-delay: 100ms; height: 20px"-->
+                <!--                                 src="/static/images/main_page/logo/huawei.png"></a>-->
+                <!--                        <a class="dropdown-item" href="/cennik-samsung">SAMSUNG-->
+                <!--                            <img class="animate__animated animate__zoomInRight"-->
+                <!--                                 style="animation-delay: 200ms; height: 20px"-->
+                <!--                                 src="/static/images/main_page/logo/samsung.png"></a>-->
+                <!--                        <a class="dropdown-item" href="/cennik-iphone">iPHONE-->
+                <!--                            <img class="animate__animated animate__zoomInRight"-->
+                <!--                                 style="animation-delay: 300ms; height: 20px"-->
+                <!--                                 src="/static/images/main_page/logo/apple.png"></a>-->
+                <!--                        <a class="dropdown-item" href="/cennik-xiaomi">XIAOMI-->
+                <!--                            <img class="animate__animated animate__zoomInRight"-->
+                <!--                                 style="animation-delay: 400ms; height: 20px"-->
+                <!--                                 src="/static/images/main_page/logo/xiaomi.png"></a>-->
+                <!--                        <a class="dropdown-item" href="/cennik-sony">SONY-->
+                <!--                            <img class="animate__animated animate__zoomInRight"-->
+                <!--                                 style="animation-delay: 500ms; height: 20px"-->
+                <!--                                 src="/static/images/main_page/logo/sony.png"></a>-->
+                <!--                        <a class="dropdown-item" href="/cennik-lg">LG-->
+                <!--                            <img class="animate__animated animate__zoomInRight"-->
+                <!--                                 style="animation-delay: 600ms; height: 20px"-->
+                <!--                                 src="/static/images/main_page/logo/lg.png"></a>-->
+                <!--                        <div class="dropdown-divider"></div>-->
+                <!--                        <a class="dropdown-item" href="/cennik-pozostale">POZOSTAŁE</a>-->
+                <!--                    </div>-->
+                <!--                </li>-->
 
                 <li class="nav-item">
                     <a class="nav-link" href="/skup">SKUP</a>
@@ -110,6 +110,24 @@
                     <a class="nav-link" href="/kontakt">KONTAKT</a>
                 </li>
 
+            </ul>
+
+
+            <ul class="navbar-nav me-3">
+                <li class="nav-item dropleft">
+                    <a class="nav-link dropleft-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        POMOC
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/kontakt">KONTAKT</a>
+                        <a class="dropdown-item" href="/polityka_prywatnosci">POLITYKA PRYWATNOŚCI</a>
+                        <a class="dropdown-item" href="/cookies">INFORMACJE O COOKIES</a>
+                        <a class="dropdown-item" href="/regulamin">REGULAMIN SERWISU</a>
+
+
+                    </div>
+                </li>
             </ul>
 
             <!--            <a href="/en_main_page" style="padding: 5px"><i class="nav-item em em-gb" aria-role="presentation"-->
@@ -129,7 +147,7 @@
     {% endblock %}
 
 </div>
-
+</body>
 <!-- FOOTER -->
 
 <footer class="page-footer bg-light fixed-bottom">
