--- a/static/css/titles.css
+++ b/static/css/titles.css
@@ -71,6 +71,21 @@
     padding: 10px;
 }
 
+.p-politics {
+    font-family: 'Oswald', sans-serif;
+    text-align: justify;
+    font-size: 15px;
+    color: rgb(0, 0, 0);
+}
+
+.p-politics-title {
+    font-family: 'Oswald', sans-serif;
+    text-align: justify;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+}
+
+
 .p-par-service {
     font-family: 'Oswald', sans-serif;
     text-align: justify;
