prepare html page

--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "pl_layout.html" %}
 
-</body>
-</html>
+{% block content %}
+<h1 class="h1-titles mb-3">INFORMACJA O COOKIES</h1>
+
+
+
+<!-- FOOTER -->
+<footer>
+    <br>
+    <h1 class="h1-titles"><br></h1>
+    <br>
+    <br>
+</footer>
+
+{% endblock %}
