--- a/templates/polityka_prywatnosci.html
+++ b/templates/polityka_prywatnosci.html
@@ -1,10 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "pl_layout.html" %}
 
-</body>
-</html>
+{% block content %}
+<h1 class="h1-titles mb-3">POLITYKA PRYWATNOŚCI</h1>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h4 class="h5-titles">W SERWSIE INTERNETOWYM <span class="h5-titles-shadow">DiPHONE Dawid Orzepowski</span>
+            </h4>
+
+            <!-- DEFINICJE -->
+            <p class="p-politics-title"><strong>1. DEFINICJE:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> ADMINISTRATOR </strong>-
+                DiPHONE Dawid Orzepowski, ul. Hetmańska 59, 05-120 Legionowo, NIP
+                5361852916, REGON 380576174</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> DANE OSOBOWE </strong>-
+                wszystkie informacje o osobie fizycznej zidentyfikowanej lub możliwej do
+                zidentyfikowania poprzez jeden bądź kilka szczególnych czynników określających fizyczną, fizjologiczną,
+                genetyczną, psychiczną, ekonomiczną, kulturową lub społeczną tożsamość, w tym IP urządzenia, dane o
+                lokalizacji, identyfikator internetowy oraz informacje gromadzone za pośrednictwem plików cookie oraz
+                innej podobnej technologii</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> POLITYKA </strong>- niniejsza
+                polityka prywatności zamieszczona pod adresem
+                https://www.diphone.pl/polityka-prywatnosci</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> RODO </strong>- Rozporządzenie
+                Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia
+                2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie
+                swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> SERWIS </strong>- serwis
+                internetowy zamieszczony pod adresem https://www.diphone.pl/</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> UŻYTKOWNIK </strong>- każda
+                osoba fizyczna odwiedzająca dany Serwis lub korzystająca z jednej
+                albo kilku usług czy funkcjonalności opisanych w Polityce</p>
+
+            <!-- PRZETWARZANIE DANYCH -->
+            <p class="p-politics-title"><strong>2. PRZETWARZANIE DANYCH W ZWIĄZKU Z KORZYSTANIEM Z SERWISU:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> W związku z korzystaniem przez
+                Użytkownika z Serwisu, Administrator zbiera dane w zakresie niezbędnym do świadczenia poszczególnych
+                oferowanych usług w Serwisie. Poniżej zostały opisane szczegółowe zasady oraz cele przetwarzania danych
+                osobowych gromadzonych podczas korzystania z Serwisów przez Użytkownika.</p>
+
+            <!-- CELE ORAZ PODSTAWY PRAWNE PRZETWARZANIA DANYCH W SERWISIE -->
+            <p class="p-politics-title"><strong>3. CELE ORAZ PODSTAWY PRAWNE PRZETWARZANIA DANYCH W SERWISIE:</strong>
+            </p>
+            <p class="p-politics">
+                <strong>3.1. KORZTSTANIE Z SERWISU:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Dane osobowe wszystkich osób
+                korzystających z Serwisów (w tym adres IP lub inne identyfikatory oraz informacje gromadzone za
+                pośrednictwem plików cookies lub innych podobnych technologii), przetwarzane są przez Administratora:
+                <br>
+                <span>●</span> w celu świadczenia usług drogą elektroniczną w zakresie udostępniania Użytkownikom treści
+                gromadzonych
+                w Serwisie – wówczas podstawą prawną 3/9 przetwarzania jest niezbędność przetwarzania do wykonania umowy
+                (art. 6 ust. 1 lit b RODO);
+                <br>
+                <span>●</span> w celach analitycznych i statystycznych – wówczas podstawą prawną przetwarzania jest
+                uzasadniony
+                interes Administratora (art. 6 ust. 1 lit f RODO) polegający na prowadzeniu analiz aktywności
+                Użytkowników, a także ich preferencji w celu poprawy stosowanych funkcjonalności i świadczonych usług;
+                <br>
+                <span>●</span> w celu ewentualnego ustalenia i dochodzenia roszczeń lub obrony przed nimi – podstawą
+                prawną
+                przetwarzania jest uzasadniony interes Administratora (art. 6 ust. 1 lit f RODO) polegający na ochronie
+                jego praw;
+                <br>
+                <span>●</span> w celach marketingowych Administratora oraz innych podmiotów, zasady przetwarzania danych
+                osobowych w
+                celach marketingowych zostały opisane w sekcji „MARKETING”;
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Aktywność Użytkownika w Serwisie, w tym
+                jego dane osobowe, są rejestrowane w logach systemowych Serwisu (specjalnym programie komputerowym
+                służącym do przechowywania chronologicznego zapisu zawierającego informację o zdarzeniach i działaniach
+                dotyczących systemu informatycznego służącego do świadczenia usług przez Administratora). Zebrane w
+                logach informacje przetwarzane są przede wszystkim w celach związanych ze świadczeniem usług.
+                Administrator przetwarza je również w celach technicznych, administracyjnych, na potrzeby zapewnienia
+                bezpieczeństwa systemu informatycznego oraz zarządzania tym systemem, a także w celach analitycznych i
+                statystycznych – w tym zakresie podstawą prawną przetwarzania jest prawnie uzasadniony interes
+                Administratora (art. 6 ust. 1 lit. f RODO)</p>
+
+
+        </div>
+    </div>
+</div>
+
+<!-- FOOTER -->
+<footer>
+    <br>
+    <h1 class="h1-titles"><br></h1>
+    <br>
+    <br>
+</footer>
+
+{% endblock %}
