--- a/templates/polityka_prywatnosci.html
+++ b/templates/polityka_prywatnosci.html
@@ -86,7 +86,115 @@
                 bezpieczeństwa systemu informatycznego oraz zarządzania tym systemem, a także w celach analitycznych i
                 statystycznych – w tym zakresie podstawą prawną przetwarzania jest prawnie uzasadniony interes
                 Administratora (art. 6 ust. 1 lit. f RODO)</p>
+            <p class="p-politics">
+                <strong>3.2. SKŁADANIE ZAMÓWIEŃ (KORZYSTANIE Z PŁATNYCH USŁUG SERWISIE):</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Złożenie zamówienia (zakupu towaru lub
+                usługi) przez Użytkownika danego Serwisu wiąże się z przetwarzaniem jego danych osobowych. Podanie
+                danych oznaczonych jako obowiązkowe jest wymagane w celu przyjęcia i obsługi zamówienia, a ich
+                niepodanie skutkuje brakiem jego realizacji. Podanie pozostałych danych jest fakultatywne.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Dane osobowe są przetwarzane:
+                <br>
+                <span>●</span> w celu realizacji złożonego zamówienia – podstawą prawną przetwarzania jest niezbędność
+                przetwarzania do wykonania umowy (art. 6 ust. 1 lit b RODO); w zakresie danych podanych fakultatywnie
+                podstawą prawną przetwarzania jest zgoda (art. 6 ust. 1 lit a RODO);
+                <br>
+                <span>●</span> w celu realizacji obowiązków ustawowych ciążących na Administratorze, wynikających w
+                szczególności z przepisów podatkowych i przepisów o rachunkowości – podstawą prawną przetwarzania jest
+                obowiązek prawny (art. 6 ust. 1 lit c RODO);
+                <br>
+                <span>●</span> w celach analitycznych i statystycznych – podstawą prawną przetwarzania jest uzasadniony
+                interes Administratora (art. 6 ust. 1 lit f RODO) polegający na prowadzeniu analiz aktywności
+                Użytkowników w danym Serwisie, a także ich preferencji zakupowych w celu doskonalenia stosowanych
+                funkcjonalności;
+                <br>
+                <span>●</span> w celu ewentualnego ustalenia i dochodzenia roszczeń lub obrony przed nimi – podstawą
+                prawną przetwarzania jest uzasadniony interes Administratora (art. 6 ust. 1 lit f RODO) polegający na
+                ochronie jego praw.
+            </p>
+            <p class="p-politics">
+                <strong>3.4. FORMULARZE KONTAKTOWE:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Administrator zapewnia możliwość
+                skontaktowania się z nim przy wykorzystaniu elektronicznych formularzy kontaktowych. Kontakt z
+                Administratorem w ramach Serwisu może się odbywać w ramach różnych celów/ powodów: np. formularz
+                reklamacyjny, formularz kontaktowy. Skorzystanie z danego formularza wymaga podania danych osobowych
+                niezbędnych do skontaktowania się z Użytkownikiem i udzielenia odpowiedzi na zapytanie/ załatwienia
+                zgłoszonej sprawy. Użytkownik może czasem podać także inne dane w celu ułatwienia kontaktu lub obsługi
+                zapytania/ zgłoszonej sprawy. Podanie danych oznaczonych jako obowiązkowe jest wymagane w celu przyjęcia
+                i obsługi zapytania/ sprawy, a ich niepodanie skutkuje brakiem możliwości obsługi. Podanie pozostałych
+                danych jest dobrowolne.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Dane osobowe w ramach Serwisu mogą być
+                przetwarzane w następujących celach:
+                <br>
+                <span>●</span> w celu identyfikacji nadawcy oraz obsługi jego zapytania przesłanego przez udostępniony
+                formularz – podstawą prawną przetwarzania jest niezbędność przetwarzania do wykonania umowy o
+                świadczenie usługi (art. 6 ust. 1 lit b RODO); w zakresie danych podanych fakultatywnie podstawą prawną
+                przetwarzania jest zgoda (art. 6 ust. 1 lit a RODO);
+                <br>
+                <span>●</span> w celu złożenia zapytania ofertowego – podstawą prawną przetwarzania jest niezbędność
+                przetwarzania do podjęcia działań przed zawarciem umowy (art. 6 ust. 1 lit b RODO); w zakresie danych
+                podanych fakultatywnie podstawą prawną przetwarzania jest zgoda (art. 6 ust. 1 lit a RODO);
+                <br>
+                <span>●</span> w celu ewentualnego ustalenia i dochodzenia roszczeń lub obrony przed nimi, w tym
+                zgłaszania reklamacji związanych ze świadczonymi usługami – podstawą prawną przetwarzania jest
+                uzasadniony interes Administratora (art. 6 ust. 1 lit f RODO) polegający na ochronie jego praw;
+                <br>
+                <span>●</span> w celach analitycznych i statystycznych – podstawą prawną przetwarzania jest uzasadniony
+                interes Administratora (art. 6 ust. 1 lit f RODO) polegający na prowadzeniu statystyk zapytań
+                zgłaszanych przez Użytkowników za pośrednictwem danego Serwisu w celu doskonalenia jego funkcjonalności.
+            </p>
 
+            <!-- PORTALE SPOŁECZNOŚCIOWE -->
+            <p class="p-politics-title"><strong>4. PORTALE SPOŁECZNOŚCIOWE:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Administrator przetwarza dane osobowe
+                Użytkowników odwiedzających profile Administratora prowadzone w mediach społecznościowych (Facebook,
+                YouTube, Instagram, Twitter). Dane te są przetwarzane wyłącznie w związku z prowadzeniem profilu, w tym
+                w celu informowania Użytkowników o aktywności Administratora oraz promowaniu różnego rodzaju wydarzeń,
+                usług oraz produktów. Podstawą prawną przetwarzania danych osobowych przez Administratora w tym celu
+                jest jego uzasadniony interes (art. 6 ust. 1 lit. f RODO) polegający na promowaniu własnej marki.</p>
+
+            <!-- PLIKI COOKIES -->
+            <p class="p-politics-title"><strong>5. PLIKI COOKIES:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Pliki cookies to małe pliki tekstowe
+                instalowane na urządzeniu Użytkownika przeglądającego dany Serwis. Cookies zbierają informacje
+                ułatwiające korzystanie ze strony internetowej – np. poprzez zapamiętywanie odwiedzin Użytkownika w
+                danym Serwisie i dokonywanych przez niego czynności.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Administrator wykorzystuje tzw. cookie
+                serwisowe przede wszystkim w celu dostarczania Użytkownikowi usług świadczonych drogą elektroniczną oraz
+                poprawy jakości tych usług. W związku z tym Administrator oraz inne podmioty świadczące na jego rzecz
+                usługi analityczne i statystyczne korzystają z plików cookies, przechowując informacje lub uzyskując
+                dostęp do informacji już przechowywanych w telekomunikacyjnym urządzeniu końcowym Użytkownika (komputer,
+                telefon, tablet itp.). Pliki cookies wykorzystywane w tym celu obejmują:
+                <br>
+                <span>●</span> pliki cookies z danymi wprowadzanymi przez Użytkownika (identyfikator sesji) na czas
+                trwania sesji (ang. user input cookies);
+                <br>
+                <span>●</span> uwierzytelniające pliki cookies wykorzystywane do usług wymagających uwierzytelniania na
+                czas trwania sesji (ang. authentication cookies);
+                <br>
+                <span>●</span> pliki cookies służące do zapewnienia bezpieczeństwa, np. wykorzystywane do wykrywania
+                nadużyć w zakresie uwierzytelniania (ang. user centric security cookies);
+                <br>
+                <span>●</span> sesyjne pliki cookies odtwarzaczy multimedialnych (np. pliki cookies odtwarzacza flash),
+                na czas trwania sesji (ang. multimedia player session cookies);
+                <br>
+                <span>●</span> trwałe pliki cookies służące do personalizacji interfejsu Użytkownika na czas trwania
+                sesji lub nieco dłużej (ang. user interface customization cookies),
+                <br>
+                <span>●</span> pliki cookies służące do monitorowania ruchu na stronie internetowej, tj. analityki
+                danych, w tym cookies Google Analytics (są to pliki wykorzystywane przez spółkę Google w celu analizy
+                sposobu korzystania z danego Serwisu przez Użytkownika, do tworzenia statystyk i raportów dotyczących
+                funkcjonowania danego Serwisu). Google nie wykorzystuje zebranych danych do identyfikacji Użytkownika
+                ani nie łączy tych informacji w celu umożliwienia identyfikacji. Szczegółowe informacje o zakresie i
+                zasadach zbierania danych w związku z tą usługą można znaleźć pod linkiem:
+                https://www.google.com/intl/pl/policies/privacy/partners.
+            </p>
 
         </div>
     </div>
