--- a/templates/polityka_prywatnosci.html
+++ b/templates/polityka_prywatnosci.html
@@ -196,6 +196,81 @@
                 https://www.google.com/intl/pl/policies/privacy/partners.
             </p>
 
+            <!-- OKRES PRZETWARZANIA DANYCH OSOBOWYCH -->
+            <p class="p-politics-title"><strong>6. OKRES PRZETWARZANIA DANYCH OSOBOWYCH:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Okres przetwarzania danych przez
+                Administratora zależy od rodzaju świadczonej usługi i celu przetwarzania. Co do zasady dane przetwarzane
+                są przez czas świadczenia usługi lub realizowania zamówienia, do czasu wycofania wyrażonej zgody lub
+                zgłoszenia skutecznego sprzeciwu względem przetwarzania danych w przypadkach, gdy podstawą prawną
+                przetwarzania danych jest uzasadniony interes Administratora.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Okres przetwarzania danych może być
+                przedłużony w przypadku, gdy przetwarzanie jest niezbędne do ustalenia i dochodzenia ewentualnych
+                roszczeń lub obrony przed nimi, a po tym czasie jedynie w przypadku i w zakresie, w jakim będą wymagać
+                tego przepisy prawa. Po upływie okresu przetwarzania dane są nieodwracalnie usuwane lub anonimizowane.
+            </p>
+
+            <!-- UPRAWNIENIA UŻYTKOWNIKA -->
+            <p class="p-politics-title"><strong>7. UPRAWNIENIA UŻYTKOWNIKA:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Użytkownikowi przysługuje prawo:
+                dostępu do treści danych oraz żądania ich sprostowania, usunięcia, ograniczenia przetwarzania, prawo do
+                przenoszenia danych oraz prawo wniesienia sprzeciwu względem przetwarzania danych, a także prawo
+                wniesienia skargi do organu nadzorczego zajmującego się ochroną danych osobowych.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> W zakresie, w jakim dane Użytkownika
+                przetwarzane są na podstawie zgody, można ją wycofać w dowolnym momencie, kontaktując się z
+                Administratorem poprzez wysłanie wiadomości e-mail na adres: kontakt@diphone.pl</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Użytkownik ma prawo zgłoszenia
+                sprzeciwu względem przetwarzania danych dla celów marketingowych, jeśli przetwarzanie odbywa się w
+                związku z uzasadnionym interesem Administratora, a także – z przyczyn związanych ze szczególną sytuacją
+                Użytkownika – 8/9 w innych przypadkach, gdy postawą prawną przetwarzania danych jest uzasadniony interes
+                Administratora (np. w związku z realizacją celów analitycznych i statystycznych)</p>
+
+            <!-- ODBIORCY DANYCH -->
+            <p class="p-politics-title"><strong>8. ODBIORCY DANYCH:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> W związku z realizacją usług dane
+                osobowe będą ujawniane zewnętrznym podmiotom, w tym w szczególności dostawcom odpowiedzialnym za obsługę
+                systemów informatycznych, podmiotom takim jak banki i operatorzy płatności, podmioty świadczące usługi
+                księgowe, kurierzy (w związku z realizacją zamówienia), agencje marketingowe (w zakresie usług
+                marketingowych) oraz podmiotom powiązanym z Administratorem.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Administrator zastrzega sobie prawo
+                ujawnienia wybranych informacji dotyczących Użytkownika właściwym organom bądź osobom trzecim, które
+                zgłoszą żądanie udzielenia takich informacji, opierając się na odpowiedniej podstawie prawnej oraz
+                zgodnie z przepisami obowiązującego prawa.</p>
+
+            <!-- BEZPIECZEŃSTWO DANYCH OSOBOWYCH -->
+            <p class="p-politics-title"><strong>9. BEZPIECZEŃSTWO DANYCH OSOBOWYCH:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Administrator na bieżąco prowadzi
+                analizę ryzyka w celu zapewnienia, że dane osobowe przetwarzane są przez niego w sposób bezpieczny –
+                zapewniający przede wszystkim, że dostęp do danych mają jedynie osoby upoważnione i jedynie w zakresie,
+                w jakim jest to niezbędne ze względu na wykonywane przez nie zadania. Administrator dba o to, by
+                wszystkie operacje na danych osobowych były rejestrowane i dokonywane jedynie przez uprawnionych
+                pracowników i współpracowników.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Administrator podejmuje wszelkie
+                niezbędne działania, by także jego podwykonawcy i inne podmioty współpracujące dawały gwarancję
+                stosowania odpowiednich środków 9/9 bezpieczeństwa w każdym przypadku, gdy przetwarzają dane osobowe na
+                zlecenie Administratora.</p>
+
+            <!-- DANE KONTAKTOWE -->
+            <p class="p-politics-title"><strong>10. DANE KONTAKTOWE:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Kontakt z Administratorem jest możliwy
+                poprzez adres e-mail kontakt@diphone.pl lub adres korespondencyjny: DiPHONE Dawid Orzepowski, ul.
+                Hetmańska 59, 05-120 Legionowo</p>
+
+            <!--  ZMIANY POLITYKI PRYWATNOŚCI -->
+            <p class="p-politics-title"><strong>11. ZMIANY POLITYKI PRYWATNOŚCI:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Polityka jest na bieżąco weryfikowana i
+                w razie potrzeby aktualizowana. Aktualna wersja Polityki została przyjęta.</p>
+
         </div>
     </div>
 </div>
