--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -34,6 +34,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
     <title>DiPHONE</title>
 </head>
@@ -161,7 +164,6 @@
                     <strong style="color: grey"> ● </strong>
                     Projekt
                     <img src="/static/images/info/ik_logo.png" alt="logo" height="20" width="20">
-                    <p></p>
                 </small>
             </div>
         </div>
